    shoes:
      activesupport
      concurrent-ruby
      i18n
      multi_json
      picky
      rack_fast_escape
      thread_safe
      tzinfo
      url_escape
      yajl-ruby
    see https://github.com/Shoes3/shoes3/issues/320
  * Chipmunk and Sqlite are now real gems, maintained by others. Shoes
    no longer has exts nor the pseudo gems: ftsearch, chipmunk, sqlite3, hpricot.
    Newer sqlite3 & chipmunk gems is included as a real gems.
  ** Major restucturing of C source code. 
    Less monolithic, more files but smaller files.
    https://github.com/Shoes3/shoes3/issues/333
  * rake files cleaned up and much faster if you are developing at the C level.
    https://github.com/Shoes3/shoes3/issues/334
  * cleanup - remove unused code and old comments. Ongoing, of course.
    https://github.com/Shoes3/shoes3/issues/251

=== Fixed with 3.3.3
  * OSX retina display should work. Finder->Show Info displays accurate info
    https://github.com/Shoes3/shoes3/issues/310
  * Restored Windows Theme (for Windows) - slows initialization slightly. 
    https://github.com/Shoes3/shoes3/issues/345
  * redirects of http to https - common now a days. 
    https://github.com/Shoes3/shoes3/issues/304
  * allow some Shoes built in dialogs like ask, confirm, ...
    to be used before Shoes.app is called.
    https://github.com/Shoes3/shoes3/issues/303
  * gifs are working on Windows again
    https://github.com/Shoes3/shoes3/issues/306
  * improve the manual
    https://github.com/Shoes3/shoes3/issues/317
  * plots/charts draw more reliably.
    issue: https://github.com/Shoes3/shoes3/issues/315
  * background doesn't scroll as expected
    issues: https://github.com/Shoes3/shoes3/issues/2
            https://github.com/Shoes3/shoes3/issues/38
            https://github.com/Shoes3/shoes3/issues/355
    new feaure.
  * moved samples/classbook.* to samples/good/good-stories.*
  * Manual disply of samples (Furthermore->Sample) now
    displays from simple to good to expert.

  