@@ -51,7 +51,7 @@
     see https://github.com/Shoes3/shoes3/issues/320
   * Chipmunk and Sqlite are now real gems, maintained by others. Shoes
     no longer has exts nor the pseudo gems: ftsearch, chipmunk, sqlite3, hpricot.
-    Newer sqlite3 & chipmunk gems is included as a real gems.
+    Newer sqlite3 & chipmunk gems are included as a real gems.
   ** Major restucturing of C source code. 
     Less monolithic, more files but smaller files.
     https://github.com/Shoes3/shoes3/issues/333
@@ -83,7 +83,9 @@
     new feaure.
   * moved samples/classbook.* to samples/good/good-stories.*
   * Manual disply of samples (Furthermore->Sample) now
-    displays from simple to good to expert.
+    orders from simple to good to expert.
+  * fix samples/simple/sqlites3.rb to work better on windows
+    and use UTF-8
 
   
 -------------- Shoes 3.3.2 ----------------------------------
